backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: v32-backend
  namespace: default
spec:
  selector:
    app: v32-backend
  ports:
    - port: 80
      targetPort: 8080
      name: http
